--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "~4.0.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "peer": "^0.2.8",
     "rxjs": "5.0.1",
+    "socket.io": "1.4.5",
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.4",
-    "zone.js": "^0.8.4",
-    "socket.io": "1.4.5"
+    "webrtc-adapter": "^6.0.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.36",
