--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "@angular/animations": "^5.0.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -20,6 +21,7 @@
     "@angular/router": "~4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "ng-pick-datetime": "^5.0.0-beta.14",
     "peer": "^0.2.8",
     "rxjs": "5.0.1",
     "socket.io": "1.4.5",
